Fix client access policy flow
